2006-02-26  Prakash Punnoor <prakash@punnoor.de>

	* admin/CMakeModules/CMakeTestASMCompiler.cmake: added
	
	* Makefile.am: add CMake modules to EXTRA_DIST
	
	* admin/CMakeModules/FindSleepFunction.cmake: typo in windows check
	
	* CMakeLists.txt: nmake doesn't like "-" in target name; Windows/VC++
	doesn't need libm; define needed for TryEnterCriticalSection;conditionally
	compile debugging code; more windows friendliness
	
	* src/al_config.c, src/al_main.c, src/al_mixer.c,
	src/backends/alc_backend_null.c, src/backends/alc_backend_wave.c,
	src/backends/alc_backend_alsa.c, src/backends/alc_backend_linux.c:
	remove unneeded headers
	
	* src/al_types.h: use longs instead of ssize_t
	
	* src/al_siteconfig.h: windows knows _snprintf
	
	* src/arch/i386/x86_simd_support_prk.h, src/arch/i386/mixaudio16_mmx_prk.c:
	work-around cast issues with gcc and mscv++
	
	* src/arch/i386/x86_cpu_caps_detect_prk.nasm,
	src/arch/i386/memcpy_mmx_prk.nasm: nasm symbol visibility support

2006-02-24  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/Makefile.am, src/al_debug.c: Conditionally compile
	debugging code.

	* src/al_debug.h: When no debug output is needed, inline _alDebug
	to a no-op, removing quite a lot of useless code from a production
	build (about 24kB on my x86 Linux) and getting some small performance
	gain. Using variadic macros is probably less portable.

	* src/al_source.c: Removed the rather obscure feature of being able to
	initialise the source rolloff factor attributes via a configuration file
	variable "source-rolloff-factor". If we want such a feature, it should
	be handled via a more general way for all source/listener/...
	attributes.

	* src/al_filter.c: Previously, the source position used for attenuating
	non-directional sources was the listener position. This is wrong, it
	should be (0,0,0).

	* src/backends/alc_backend_esd.c: Open connection to EsounD daemon only
	once. More simplifications.

2006-02-22  Sven Panne  <sven.panne@aedion.de>
