@@ -296,7 +296,7 @@ IF(CMAKE_SYSTEM MATCHES "Windows")
   # needed for TryEnterCriticalSection
   ADD_DEFINITIONS(-D_WIN32_WINNT=0x0400)
   # don't spit out deprecation warnings
-  ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE -D__MMX__)
+  ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
 ELSE(CMAKE_SYSTEM MATCHES "Windows")
 
 IF(CMAKE_SYSTEM MATCHES "Darwin")
@@ -491,7 +491,14 @@ IF(CMAKE_SYSTEM_MACHINE MATCHES "i.86" OR CMAKE_SYSTEM_MACHINE MATCHES "x86_64")
   INCLUDE_DIRECTORIES(${OpenAL_SOURCE_DIR}/src/arch/i386)
   SET(ARCH_OBJS ${x86_OBJS})
 
-  MACRO_TEST(__MMX__ HAVE_MMX)
+  IF(CMAKE_SYSTEM MATCHES "Windows")
+   # this should get fixed into a real detection
+   ADD_DEFINITIONS(-D__MMX__)
+   SET(HAVE_MMX)
+  ELSE(CMAKE_SYSTEM MATCHES "Windows")
+    MACRO_TEST(__MMX__ HAVE_MMX)
+  ENDIF(CMAKE_SYSTEM MATCHES "Windows")
+
   IF(HAVE_MMX)
     SET(ARCH_OBJS ${ARCH_OBJS} ${x86_MMX_OBJS})
   
